--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "mix",
-        "watch": "mix watch",
-        "watch-poll": "mix watch -- --watch-options-poll=1000",
-        "hot": "mix watch --hot",
-        "prod": "npm run production",
-        "production": "mix --production"
+        "dev": "webpack --mode development",
+        "watch": "webpack --watch",
+        "prod": "webpack --mode production"
     },
     "devDependencies": {
         "@babel/core": "^7.26.0",
@@ -17,7 +13,6 @@
         "axios": "^1.7.4",
         "babel-loader": "^9.2.1",
         "bootstrap": "^5.3.3",
-        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
@@ -26,7 +21,9 @@
         "sass": "^1.56.1",
         "sass-loader": "^12.1.0",
         "tailwindcss": "^3.4.14",
-        "vue-loader": "^17.4.2"
+        "vue-loader": "^17.4.2",
+        "webpack": "^5.96.1",
+        "webpack-cli": "^5.1.4"
     },
     "dependencies": {
         "@vue/cli-service": "^5.0.8",
